--- a/PentaGE/PentaGE.csproj
+++ b/PentaGE/PentaGE.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GLFW\GLFW.csproj" />
   </ItemGroup>
 
