--- a/PentaGE/PentaGE.csproj
+++ b/PentaGE/PentaGE.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="StbImageSharp" Version="2.27.13" />
   </ItemGroup>
 
   <ItemGroup>
